variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: type int
var nbPas:int=0
          ^