variables.Variables.scala.code
var nbPas:int=0

while (estSurBiscuit()==true) {
  nbPas=nbPas+1
  avance()
}